# phys-435

./: README.md  pyproject.toml
HW 1/: simple_statistics.html  simple_statistics.ipynb
HW 2/: dice.html  dice.ipynb
Lab 1/: lab_1.html  lab_1.ipynb
Lab 2/: lab_2.html  lab_2.ipynb
Lab 3/: lab_3.html  lab_3.ipynb
Lab 4/: lab_4.html  lab_4.ipynb
Lab 5/: .gitignore  lab_5.html  lab_5.ipynb
Lab 6/: lab_6.html  lab_6.ipynb
Lab 7/: lab_7.html  lab_7.ipynb
