[tool.poetry]
name = "phys-434"
version = "0.1.0"
description = "University of Washington PHYS 434 Assignments, Labs, etc."
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.3"
numpy = "^1.17"
pandas = "^0.25.3"
matplotlib = "^3.1"
h5py = "^2.10"
pyuvdata = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
