[tool.poetry]
name = "phys-434"
version = "0.1.0"
description = "University of Washington PHYS 434 Assignments, Labs, etc."
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.4"
numpy = "^1.18"
pandas = "^1.0"
matplotlib = "^3.2"
h5py = "^2.10"
pyuvdata = "^2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3"
cython = "^0.29.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
